alterada algumas configuracoes do docker
